<resources>
    <string name="app_name">Fruit Shop</string>
    <string name="fruit_list">Fruit List</string>
    <string name="add_list">Add</string>
    <string name="update_list">Up Date</string>
    <string name="sub_list">Delete</string>
    <string name="fruit_price">Price</string>
    <string name="fruit_name">Fruit Name</string>
    <string name="pkg_date">Pkg Date :</string>
    <string name="exp_date">Exp Date :</string>
    <string name="add_fruit_name">Plz Enter Fruit Name</string>
    <string name="add_pkg_date">Enter Fruit Pkg Date</string>
    <string name="add_exp_date">Enter Fruit Exp Date</string>
    <string name="add_fruit_price">Enter Fruit Price</string>
    <string name="delete_fruit_name">Plz Enter Delete Fruit Name</string>
    <string name="delete_fruit_price">Plz Enter Delete Fruit Price</string>
    <string name="delete_fruit">Delete</string>
    <string name="old_fruit_price">Plz Enter Old Fruit Price</string>
    <string name="new_fruit_price">Plz Enter New Fruit Price</string>
    <string name="add_fruit_dilog_msg">Do you want to add this fruit?</string>
    <string name="delete_fruit_dialod_msg">Do you want to delete this fruit?</string>
    <string name="update_fruit_dilog_msg">Do you want to update this fruit price</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="list_menu">&#8942;</string>
    <string name="Rs">\u20B9</string>
</resources>
