<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingRight="45dp"
    android:paddingLeft="45dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_background"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/et_add_fruit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxLength="10"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/add_fruit_name"
                android:inputType="text"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/et_add_fruit_pkg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="date"
                android:hint="@string/add_pkg_date"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/et_add_fruit_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="date"
                android:hint="@string/add_exp_date"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/et_add_fruit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="number"
                android:hint="@string/add_fruit_price"
                android:padding="10dp"/>

            <Button
                android:id="@+id/btn_add_fruit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/update_btn_background"
                android:padding="5dp"
                android:text="@string/add_list"
                android:textSize="15sp"/>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>