<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/cardview_background"
        card_view:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9.99"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:id="@+id/tv_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/fruit_name"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="2dp"
                        android:padding="2dp"
                        android:layout_weight="1.8">


                        <TextView
                            android:id="@+id/tv_fPkg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="2dp"
                            android:gravity="center_vertical"
                            android:hint="@string/pkg_date"/>

                        <TextView
                            android:id="@+id/tv_fExp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:gravity="center_vertical"
                            android:hint="@string/exp_date"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_fPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="bottom"
                        android:hint="@string/fruit_price"
                        android:text="@string/Rs"
                        android:textSize="20sp"
                        android:textStyle="italic|bold"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/list_menu"
                    android:textAppearance="?textAppearanceLargePopupMenu"
                    android:textColor="#ff0000"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>